Added groups Modified dashboard Added highlighting for new logs (never displayed)

--- a/cems-SPA/src/app/users/users-edit/users-edit.component.html
+++ b/cems-SPA/src/app/users/users-edit/users-edit.component.html
@@ -3,66 +3,42 @@
         <div class="col-sm-">
             <h1>Your Profile</h1>
         </div>
-        <div class="col-sm-8">
-            <!-- <div *ngIf="editForm.dirty" class="alert alert-info">
-              <strong>Information:</strong> You have made changes.  Any unsaved changes will be lost!
-            </div> -->
-        </div>
+
     </div>
-    <div class="row">
-        <div class="col-sm-4 text-center">
-            <div class="card">
-                <div class="card-header">
-                    <h4>Api Key</h4>
-                </div>
-                <div class="card-body">
-                    <div>
-                        <p>{{user.webApiKey.apiKey}}</p>
-                    </div>
-
-                </div>
-                <!-- <div class="card-footer">
-                  <button [disabled]="!editForm.dirty" form="editForm" class="btn btn-success btn-block">Save Changes</button>
-                </div> -->
-            </div>
-        </div>
-        <div class="col-sm-8 text-center">
-            <div class="card">
-                <div class="card-header">
-                    <h3>Trusted Host</h3>(Not Working)
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-10">
-                            <form #trustedHosts="ngForm">
-                                <input type="text" class="w-75" [(ngModel)]="hostToAdd.host" name="hostToAdd"
-                                       placeholder="Host">
-                            </form>
+    <div class="row ">
+        <div class="col col 6 ">
+            <div class="row">
+                <div class="col col-12" *ngFor="let apiKey of user.apiKeys">
+                    <div class="card">
+                        <div class="card-header">
+                            <h6>Api key <code> {{apiKey.key}} </code> trusted hosts</h6>
                         </div>
-                        <div class="col-sm-2">
-                            <button class="btn btn-success" (click)="AddHost()" form="trustedHosts" type="submit">Add
-                            </button>
+                        <div class="card-body">
+                            <div *ngFor="let host of apiKey.trustedHosts">
+                                {{host}}
+                            </div>
                         </div>
-
-                    </div>
-                    <div *ngFor="let host of user.webApiKey.trustedHosts" class="row p-1 m-1">
-                        <div class="col-sm-10"><input type="text" name="host" disabled value="{{host.host}}"></div>
-                        <div class="col-sm-2">
-                            <button class="btn btn-danger" (click)="AddHost()" type="submit">Remove</button>
+                        <div class="card-footer">
+                            <div class="row">
+                                <div class="col col-9">
+                                    <input [id]=apiKey.key type="text" name="addTrustedHost" class="form-control">
+                                </div>
+                                <div class="col col-3">
+                                    <button class="btn btn-primary w-100" (click)="AddHost(apiKey.key)">Add
+                                        host</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row m-2 justify-content-end">
         <div class="col-6 ">
             <form [formGroup]="userForm" #f="ngForm" (submit)="updateUser(userForm)">
                 <div class="form-group">
                     <label for="username">username</label>
-                    <input readonly id="username" type="text" formControlName="username"
-                           class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.username.errors }"/>
+                    <input readonly id="username" type="text" formControlName="username" class="form-control"
+                        [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
                     <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                         <div *ngIf="f.username.errors.required">Username is required</div>
                     </div>
@@ -70,7 +46,7 @@
 
                 <div class="form-group">
                     <label for="firstName">First Name</label>
-                    <input [readonly]="!editMode" type="text" formControlName="firstName" class="form-control"/>
+                    <input [readonly]="!editMode" type="text" formControlName="firstName" class="form-control" />
                     <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
                         <div *ngIf="f.firstName.errors.required">First Name is required</div>
                     </div>
@@ -79,7 +55,7 @@
                 <div class="form-group">
                     <label for="lastName">Last Name</label>
                     <input [readonly]="!editMode" id="lastName" type="text" formControlName="lastName"
-                           class="form-control"/>
+                        class="form-control" />
                     <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
                         <div *ngIf="f.lastName.errors.required">Last Name is required</div>
                     </div>
@@ -89,7 +65,7 @@
                 <div class="form-group">
                     <label for="email">Email</label>
                     <input [readonly]="!editMode" id="email" type="email" formControlName="email" class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+                        [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                     <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
                         <div *ngIf="f.email.errors.required">Email is required</div>
                     </div>
@@ -98,8 +74,7 @@
                 <div class="form-group">
                     <label for="phoneNumber">Phone number</label>
                     <input [readonly]="!editMode" id="phoneNumber" type="email" formControlName="phoneNumber"
-                           class="form-control"
-                           [ngClass]="{ 'is-invalid': submitted && f.phoneNumber.errors }"/>
+                        class="form-control" [ngClass]="{ 'is-invalid': submitted && f.phoneNumber.errors }" />
                     <div *ngIf="submitted && f.phoneNumber.errors" class="invalid-feedback">
                         <div *ngIf="f.phoneNumber.errors.required">Phone number is required</div>
                     </div>
@@ -108,12 +83,11 @@
                 <div class="col">
                     <button *ngIf="editMode" class="btn btn-success  m-2 float-right" type="submit">Submit</button>
                     <button type="button" (click)="toggleEditMode()"
-                            [className]="!editMode ? 'btn float-right btn-warning' : 'btn  m-2 float-right btn-danger'"
-                    >{{!editMode ? 'Edit' : 'Cancel' }}
+                        [className]="!editMode ? 'btn float-right btn-warning' : 'btn  m-2 float-right btn-danger'">{{!editMode ? 'Edit' : 'Cancel' }}
                     </button>
                 </div>
             </form>
         </div>
     </div>
-</div>
 
+</div>
