--- a/cems-SPA/src/app/dashboard/dashboard.component.html
+++ b/cems-SPA/src/app/dashboard/dashboard.component.html
@@ -1,55 +1,12 @@
-<div class="container p-3">
-  <form class="form-inline justify-content-end" #form="ngForm" (ngSubmit)="loadLogs()" novalidate>
-    <div class="form-group">
-      <label for="timeValue">Last </label>
-      <input type="number" class="form-control ml-1" style="width:70px" id="timeValue" name="timeValue"
-        [(ngModel)]="userParams.timeValue" />
+<div class="container-fluid">
+  <div class="row">
+    <div class="col col-6 p-3">
+      <h1 class="text-center ">All logs</h1>
+      <app-log-list></app-log-list>
     </div>
-    <div class="form-group">
-      <label for="timeUnits"></label>
-      <select class="form-control ml-1" style="width: 110px;" id="timeUnits" name="timeUnits"
-        [(ngModel)]="userParams.timeUnits">
-        <option *ngFor="let unit of timeUnits" [value]="unit.value">
-          {{ unit.display }}
-        </option>
-      </select>
-      <button type="submit" class="btn btn-primary" style="margin-left: 10px">Apply Filters</button>
-      <button type="button" class="btn btn-info" (click)="resetFilters()" style="margin-left: 10px">Reset
-        Filters</button>
+    <div class="col col-6 p-3">
+      <h1 class="text-center ">Groups</h1>
+      <app-group-list></app-group-list>
     </div>
-  </form>
-  <br />
-
-  <table class="table table-stripped table-hover table-bordered">
-    <thead class="thead-light">
-      <tr>
-        <th [class]="currentOrderBy == 'id' ? 'thActive' : ''" (click)="sort('id')">Id</th>
-        <th>Message</th>
-        <th [class]="currentOrderBy == 'source' ? 'thActive' : ''" (click)="sort('source')">Source</th>
-        <th [class]="currentOrderBy == 'timestamp' ? 'thActive' : ''" (click)="sort('timestamp')">Timestamp</th>
-        <th [class]="currentOrderBy == 'progLng' ? 'thActive' : ''" (click)="sort('progLng')">Programming language</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let log of logs" (click)="redirectToLogDetail(log.id)">
-        <td>{{ log.id }}</td>
-        <td>{{ log.exceptionDetails.message }}</td>
-        <td>{{ log.exceptionDetails.source }}</td>
-        <td>{{ log.timestamp | date: 'medium' }}</td>
-        <td>{{ getCorespondingPlatfrom( log.platform )}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<!-- <div class="row" *ngFor="let log of logGroups">
-    <div class="col col-1 py-2 bg-light border d-flex justify-content-center align-items-center"><input type="checkbox" class="logActionCheckBox" /></div>
-    <app-log-header class="col col-10" [log]="log" [toggleable]="true" (toggleStatus)="onLogToggle($event, log.id)"> </app-log-header>
-  </div> -->
-
-<div class="d-flex mt-3 justify-content-center">
-  <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [(ngModel)]="pagination.currentPage"
-    [itemsPerPage]="pagination.itemsPerPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;"
-    nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
-  </pagination>
+  </div>
 </div>
