--- a/cems-SPA/src/app/dashboard/javascript/browser-event/browser-event.component.html
+++ b/cems-SPA/src/app/dashboard/javascript/browser-event/browser-event.component.html
@@ -1,13 +1,8 @@
 <div id="stackFrame" class=" px-3 ">
-  <div
-    class="row collapsible bg-light p-2"
-    (click)="isCollapsed = !isCollapsed"
-    data-toggle="collapse"
-    [attr.aria-expanded]="!isCollapsed"
-    aria-controls="sourceCode"
-  >
-    <div class="col col-12" [innerHTML]="getHeader()"></div>
-    <div class="col col-12  text-right">{{ fortmatedTimestamp() }}</div>
+  <div class="row collapsible bg-light p-2" (click)="isCollapsed = !isCollapsed" data-toggle="collapse"
+    [attr.aria-expanded]="!isCollapsed" aria-controls="sourceCode">
+    <div class="col col-6" [innerHTML]="getHeader()"></div>
+    <div class="col col-6  text-right">{{ fortmatedTimestamp() }}</div>
   </div>
   <div class="row p-1 content" id="sourceCode" [collapse]="isCollapsed">
     <div class="col">
